fix: don't run browser support tests on PR's (fixes #156)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: node_js
-script: sh ./build/travis.sh
+script:
+  - 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then sh ./build/build.sh; fi'
+  - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then sh ./build/pr.sh; fi'
 node_js:
   - "node"
 after_success:
