--- a/package.json
+++ b/package.json
@@ -26,11 +26,9 @@
   },
   "homepage": "https://github.com/kbrsh/moon#readme",
   "devDependencies": {
-    "buble": "^0.15.2",
     "chai": "^3.5.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
-    "gulp-connect": "^5.0.0",
     "gulp-header": "^1.8.8",
     "gulp-include": "^2.3.1",
     "gulp-replace": "^0.5.4",
@@ -44,6 +42,9 @@
     "karma-spec-reporter": "0.0.31",
     "mocha": "^3.4.2",
     "phantomjs-prebuilt": "^2.1.14",
-    "uglify-js": "^3.0.27"
+    "rollup-plugin-buble": "^0.18.0",
+    "rollup-stream": "^1.24.1",
+    "uglify-js": "^3.0.27",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
