--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "moonjs",
-  "version": "0.11.0",
+  "name": "moon",
+  "version": "1.0.0",
   "description": "A minimal, blazing fast user interface library.",
   "main": "dist/moon.min.js",
   "scripts": {
@@ -15,9 +15,11 @@
   },
   "keywords": [
     "moon",
-    "mvvm",
     "user interface",
-    "UI"
+    "UI",
+    "view",
+    "model",
+    "library"
   ],
   "author": "Kabir Shah",
   "license": "MIT",
@@ -26,24 +28,16 @@
   },
   "homepage": "https://github.com/kbrsh/moon#readme",
   "devDependencies": {
-    "buble": "^0.15.2",
-    "chai": "^3.5.0",
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-connect": "^5.0.0",
-    "gulp-header": "^1.8.8",
-    "gulp-include": "^2.3.1",
-    "gulp-replace": "^0.5.4",
-    "gulp-size": "^2.1.0",
-    "gulp-uglify": "^3.0.0",
-    "karma": "^1.7.0",
+    "buble": "^0.19.3",
+    "chai": "^4.1.2",
+    "karma": "^2.0.2",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.4",
-    "karma-sauce-launcher": "^1.1.0",
-    "karma-spec-reporter": "0.0.31",
-    "mocha": "^3.4.2",
-    "phantomjs-prebuilt": "^2.1.14",
-    "uglify-js": "^3.0.27"
+    "karma-sauce-launcher": "^1.2.0",
+    "karma-spec-reporter": "0.0.32",
+    "mocha": "^5.1.1",
+    "phantomjs-prebuilt": "^2.1.16",
+    "uglify-js": "^3.3.22"
   }
 }
