--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 script:
-  - 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then sh ./build/build.sh; fi'
-  - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then sh ./build/pr.sh; fi'
+  - 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then sh ./build/travis.sh; fi'
+  - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then sh ./build/travis-pr.sh; fi'
 node_js:
   - "node"
 after_success:
