--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "karma-spec-reporter": "0.0.32",
     "mocha": "^5.1.1",
     "phantomjs-prebuilt": "^2.1.16",
+    "rollup": "^0.58.1",
     "uglify-js": "^3.3.22"
   }
 }
