--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mocha": "^5.1.1",
     "phantomjs-prebuilt": "^2.1.16",
     "rollup": "^0.58.1",
+    "rollup-plugin-buble": "^0.19.2",
     "uglify-js": "^3.3.22"
   }
 }
