--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "buble": "^0.19.3",
     "chai": "^4.1.2",
+    "gzip-size": "^4.1.0",
     "karma": "^2.0.2",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
