--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "moon",
   "version": "1.0.0-beta.1",
-  "description": "The minimal & fast UI library.",
+  "description": "The minimal & fast UI library",
   "scripts": {
     "build": "for d in ./packages/*; do (cd \"$d\" && npm run build); done",
     "test": "for d in ./packages/*; do (cd \"$d\" && npm run test); done"
