--- a/packages/moon/package.json
+++ b/packages/moon/package.json
@@ -1,7 +1,7 @@
 {
   "name": "moon",
   "version": "1.0.0-beta.1",
-  "description": "A minimal, blazing fast user interface library.",
+  "description": "The minimal & fast UI library",
   "main": "dist/moon.min.js",
   "scripts": {
     "build": "node build/build.js",
