--- a/packages/moon-cli/package.json
+++ b/packages/moon-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moon-cli",
-  "version": "1.0.0-alpha",
+  "version": "1.0.0-beta.1",
   "description": "Moon project generator",
   "main": "index.js",
   "bin": {
