--- a/packages/moon-mvl/package.json
+++ b/packages/moon-mvl/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moon-mvl",
-  "version": "1.0.0-beta.1",
+  "version": "1.0.0-pre",
   "description": "Moon MVL component compiler",
   "main": "index.js",
   "scripts": {
