--- a/packages/moon/package.json
+++ b/packages/moon/package.json
@@ -5,7 +5,7 @@
   "main": "dist/moon.min.js",
   "scripts": {
     "build": "node build/build.js",
-    "test": "karma start test/karma.conf.js; node test/log.js"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -26,20 +26,13 @@
   },
   "homepage": "https://github.com/kbrsh/moon#readme",
   "devDependencies": {
-    "buble": "^0.19.3",
-    "chai": "^4.1.2",
-    "gzip-size": "^4.1.0",
-    "karma": "^2.0.2",
-    "karma-coverage": "^1.1.1",
-    "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.4",
-    "karma-sauce-launcher": "^1.2.0",
-    "karma-spec-reporter": "0.0.32",
-    "mocha": "^5.1.1",
-    "phantomjs-prebuilt": "^2.1.16",
-    "rollup": "^0.58.1",
-    "rollup-plugin-buble": "^0.19.2",
-    "rollup-plugin-eslint": "^4.0.0",
-    "uglify-js": "^3.3.22"
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "gzip-size": "^5.0.0",
+    "jest": "^24.6.0",
+    "rollup": "^1.8.0",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-eslint": "^5.1.0",
+    "uglify-js": "^3.5.3"
   }
 }
