--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0-beta.2",
   "description": "The minimal & fast UI library",
   "scripts": {
-    "build": "for d in ./packages/*; do (cd \"$d\" && npm run build); done",
-    "test": "for d in ./packages/*; do (cd \"$d\" && npm run test); done"
+    "build": "node build/build.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,15 @@
   "bugs": {
     "url": "https://github.com/kbrsh/moon/issues"
   },
-  "homepage": "https://github.com/kbrsh/moon#readme"
+  "homepage": "https://github.com/kbrsh/moon#readme",
+  "devDependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "gzip-size": "^5.0.0",
+    "jest": "^24.6.0",
+    "rollup": "^1.8.0",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-eslint": "^5.1.0",
+    "uglify-js": "^3.5.3"
+  }
 }
