--- a/packages/moon-cli/package.json
+++ b/packages/moon-cli/package.json
@@ -2,13 +2,9 @@
   "name": "moon-cli",
   "version": "1.0.0-beta.2",
   "description": "Moon project generator",
-  "main": "index.js",
+  "main": "src/index.js",
   "bin": {
-    "moon": "index.js"
-  },
-  "scripts": {
-    "build": "echo \"Build Moon CLI\"",
-    "test": ""
+    "moon": "src/index.js"
   },
   "repository": {
     "type": "git",
