don't check loops for constant conditions

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,7 @@
         "no-compare-neg-zero": 2,
         "no-cond-assign": 2,
         "no-const-assign": 2,
-        "no-constant-condition": 2,
+        "no-constant-condition": ["error", { "checkLoops": false }],
         "no-control-regex": 2,
         "no-debugger": 2,
         "no-delete-var": 2,
