--- a/.eslintrc
+++ b/.eslintrc
@@ -49,6 +49,7 @@
         "no-unused-labels": 2,
         "no-unused-vars": 2,
         "no-useless-escape": 2,
+        "object-shorthand": 2,
         "require-yield": 2,
         "semi": 2,
         "use-isnan": 2,
