--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
     },
     "rules": {
         "constructor-super": 2,
+        "dot-notation": 2,
         "no-class-assign": 2,
         "no-compare-neg-zero": 2,
         "no-cond-assign": 2,
