--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
 	"rules": {
 		"constructor-super": 2,
 		"dot-notation": 2,
+		"eqeqeq": 2,
 		"no-class-assign": 2,
 		"no-compare-neg-zero": 2,
 		"no-cond-assign": 2,
