--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "moon",
-	"version": "1.0.0-beta.2",
+	"name": "moon-root",
+	"private": true,
 	"description": "The minimal & fast UI library",
 	"scripts": {
 		"build": "node build/build.js",
@@ -24,6 +24,7 @@
 		"rollup": "^1.8.0",
 		"rollup-plugin-babel": "^4.3.2",
 		"rollup-plugin-eslint": "^5.1.0",
+		"rollup-plugin-includepaths": "^0.2.3",
 		"uglify-js": "^3.5.3"
 	}
 }
