--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
 		"@babel/preset-env": "^7.7.4",
 		"gzip-size": "^5.0.0",
 		"jest": "^24.9.0",
-		"rollup": "^1.27.7",
+		"rollup": "^1.27.8",
 		"rollup-plugin-babel": "^4.3.2",
 		"rollup-plugin-eslint": "^5.1.0",
-		"uglify-js": "^3.7.1"
+		"terser": "^4.4.2"
 	}
 }
