new style and begin landing

--- a/package.json
+++ b/package.json
@@ -1,28 +1,22 @@
 {
-  "name": "moon-web",
-  "version": "1.0.0-beta.1",
-  "description": "Moon Web",
-  "main": "soldfile.js",
-  "directories": {
-    "doc": "doc",
-    "example": "examples"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kbrsh/moon.git"
-  },
-  "keywords": [
-    "moon",
-    "web"
-  ],
-  "author": "Kabir Shah",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/kbrsh/moon/issues"
-  },
-  "homepage": "https://github.com/kbrsh/moon#readme",
-  "devDependencies": {
-    "handlebars": "^4.0.11",
-    "sold": "^2.3.2"
-  }
+	"name": "moon-web",
+	"private": true,
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/kbrsh/moon.git"
+	},
+	"keywords": [
+		"moon",
+		"web"
+	],
+	"author": "Kabir Shah",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/kbrsh/moon/issues"
+	},
+	"homepage": "https://github.com/kbrsh/moon#readme",
+	"devDependencies": {
+		"prismjs": "^1.17.1",
+		"sold": "^3.0.0"
+	}
 }
