no comma dangle

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
 	},
 	"rules": {
 		"arrow-parens": ["error", "as-needed"],
+		"comma-dangle": ["error", "never"],
 		"constructor-super": 2,
 		"dot-notation": 2,
 		"eqeqeq": 2,
